--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@ng-bootstrap/ng-bootstrap": "3.0.0",
     "bootstrap": "4.1.3",
     "core-js": "2.5.7",
+    "echarts": "^4.2.1",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.4",
     "ngx-cookie": "2.0.1",
+    "ngx-echarts": "^4.2.1",
     "ngx-infinite-scroll": "6.0.1",
     "ngx-webstorage": "2.0.1",
     "reflect-metadata": "0.1.12",
@@ -33,7 +35,7 @@
     "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.1.2",
+    "@angular/cli": "^8.1.2",
     "@angular/compiler-cli": "6.1.0",
     "@ngtools/webpack": "6.0.0",
     "@types/jest": "22.2.3",
@@ -63,10 +65,13 @@
     "mini-css-extract-plugin": "0.4.2",
     "moment-locales-webpack-plugin": "1.0.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "postcss-loader": "2.1.1",
     "prettier": "1.11.1",
     "proxy-middleware": "0.15.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
+    "sass": "1.13.0",
+    "sass-loader": "7.1.0",
     "simple-progress-webpack-plugin": "1.1.2",
     "style-loader": "0.20.3",
     "tapable": "1.0.0",
@@ -78,10 +83,6 @@
     "tslint-config-prettier": "1.9.0",
     "tslint-loader": "3.6.0",
     "typescript": "2.7.2",
-    "sass": "1.13.0",
-    "sass-loader": "7.1.0",
-    "postcss-loader": "2.1.1",
-    "xml2js": "0.4.19",
     "webpack": "4.8.0",
     "webpack-cli": "2.1.3",
     "webpack-dev-server": "3.1.5",
@@ -89,7 +90,8 @@
     "webpack-notifier": "1.6.0",
     "webpack-visualizer-plugin": "0.1.11",
     "workbox-webpack-plugin": "3.2.0",
-    "write-file-webpack-plugin": "4.2.0"
+    "write-file-webpack-plugin": "4.2.0",
+    "xml2js": "0.4.19"
   },
   "engines": {
     "node": ">=8.9.0"
