--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "echarts": "^4.2.1",
     "moment": "2.22.2",
     "ng-jhipster": "0.5.4",
+    "ng2-file-upload": "^1.4.0",
     "ngx-cookie": "2.0.1",
     "ngx-echarts": "^4.2.1",
     "ngx-infinite-scroll": "6.0.1",
